0.19.12	UNRELEASED

 BUG FIXES

 * Update directory detection for `get_unstaged_changes` for Python 3.
   (Boris Feld, #684)

0.19.11	2019-02-07

 IMPROVEMENTS

 * Use fullname from gecos field, if available.
   (Jelmer Vernooĳ)

 * Support ``GIT_AUTHOR_NAME`` / ``GIT_AUTHOR_EMAIL``.
   (Jelmer Vernooĳ)

 * Add support for short ids in parse_commit. (Jelmer Vernooĳ)

 * Add support for ``prune`` and ``prune_tags`` arguments
   to ``porcelain.fetch``. (Jelmer Vernooĳ, #681)

 BUG FIXES

  * Fix handling of race conditions when new packs appear.
    (Jelmer Vernooĳ)

0.19.10	2018-01-15

 IMPROVEMENTS

 * Add `dulwich.porcelain.write_tree`.
   (Jelmer Vernooĳ)

 * Support reading ``MERGE_HEADS`` in ``Repo.do_commit``.
   (Jelmer Vernooĳ)

 * Import from ``collections.abc`` rather than ``collections`` where
   applicable. Required for 3.8 compatibility.
   (Jelmer Vernooĳ)

 * Support plain strings as refspec arguments to
   ``dulwich.porcelain.push``. (Jelmer Vernooĳ)

 * Add support for creating signed tags.
   (Jelmer Vernooĳ, #542)

 BUG FIXES

 *  Handle invalid ref that pretends to be a sub-folder under a valid ref.
    (KS Chan)

0.19.9	2018-11-17

 BUG FIXES

 * Avoid fetching ghosts in ``Repo.fetch``.
   (Jelmer Vernooĳ)

 * Preserve port and username in parsed HTTP URLs.
   (Jelmer Vernooĳ)

 * Add basic server side implementation of ``git-upload-archive``.
   (Jelmer Vernooĳ)

0.19.8	2018-11-06

 * Fix encoding when reading README file in setup.py.
   (egor <egor@sourced.tech>, #668)

0.19.7	2018-11-05

 CHANGES

  * Drop support for Python 3 < 3.4. This is because
    pkg_resources (which get used by setuptools and mock)
    no longer supports 3.3 and earlier. (Jelmer Vernooĳ)

 IMPROVEMENTS

  * Support ``depth`` argument to ``GitClient.fetch_pack`` and support
    fetching and updating shallow metadata. (Jelmer Vernooĳ, #240)

 BUG FIXES

  * Don't write to stdout and stderr when they are not available