@@ -147,5 +147,6 @@ Boris Feld <lothiraldan@gmail.com>
 KS Chan <mrkschan@gmail.com>
 egor <egor@sourced.tech>
 Antoine Lambert <anlambert@softwareheritage.org>
+Lane Barlow <lane.barlow@gmail.com>
 
 If you contributed but are missing from this list, please send me an e-mail.
